--- a/.classpath
+++ b/.classpath
@@ -6,7 +6,7 @@
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="C:/Users/Sonia Tozzo/Downloads/MythicMobs-5.0.0-SNAPSHOT (1).jar"/>
-	<classpathentry kind="lib" path="C:/Users/Sonia Tozzo/Downloads/spigot-api-1.18.1-R0.1-SNAPSHOT-shaded.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Hp/Downloads/spigot-api-1.18.1-R0.1-SNAPSHOT-shaded.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Hp/Downloads/MythicMobs-5.0.0-SNAPSHOT.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
